# 13

./: .gitignore  LICENSE  README.md  README_PHASE12_BRANCH.md  pyproject.toml
compute_phase12_selection/: phase12_public.pem  run_select_and_encrypt.py
data/: null_target_audit_v0.7.csv  phase11_expanded_target_pool.csv  phase12_batched_multisector_pool.csv  real_calibration_targets.csv  stratified_targets_v0.7.csv
docs/: EVIDENCE_FINGERPRINTS.md  GAP_AWARE_SURROGATE_CONTROLS.md  PHASE0_10_PRIVATE_REAL_CAMPAIGN.md  PHASE0_11_EXPANDED_BLIND_CAMPAIGN.md  PHASE0_12_ATOMIC_CHECKPOINTS.md  PHASE0_12_BATCHED_MULTISECTOR_CAMPAIGN.md  PHASE0_12_LOCKED_INPUT_RESUME.md  PHASE0_12_REAL_SEARCH_RESULT.md  PHASE0_13_REAL_INPUT_SENSITIVITY.md  PHASE0_14_EXECUTION_PROVENANCE_AMENDMENT.md  PHASE0_14_POWER_RESTORE.md  PHASE0_3_REAL_TESS_ENGINE.md  PHASE0_7_REAL_TESS_RESULT_REPORT_2026-07-22.md  PHASE0_7_STRATIFIED_PHYSICAL_PROTOCOL.md  PHASE0_8_FROZEN_CANDIDATE_PROTOCOL.md  PHASE0_9_BLIND_REAL_CAMPAIGN.md  PHASE1_REAL_DATA_CALIBRATION.md  REAL_TESS_SENSITIVITY_REPORT_2026-07-22.md  ROADMAP.md
examples/: benchmark_pi_men.py  calibrate_single_transits.py  known_planet.py  postprocess_matched_controls.py  run_benchmark.py  run_candidate_freeze_fixture.py  run_phase09_candidate_calibration_fixture.py  run_phase10_private_fixture.py  run_phase10_private_real_campaign.py  run_phase11_private_real_campaign.py  run_phase12_locked_campaign.py  run_phase12_private_real_campaign.py  run_phase13_private_real_campaign.py  run_real_calibration_batch.py  run_real_ppm_batch.py  (+7 more)
tests/: conftest.py  (+37 more)
(+119 files in other folders)
